snapshot before adding Coin Names

--- a/ntag424_sdm_provisioner/src/ntag424_sdm_provisioner/server/templates/index.html
+++ b/ntag424_sdm_provisioner/src/ntag424_sdm_provisioner/server/templates/index.html
@@ -68,13 +68,19 @@
         padding: 15px;
       }
       .header h1 {
-        font-size: 1.8em;
+        font-size: 2.0em;
       }
       .fancy-text {
-        font-size: 3.5rem;
+        font-size: 3.8rem;
       }
-      .tab-content .results-table td { font-size: 1.8rem; }
-      .tab-content .stats-table td, .tab-content .recent-flips-table td, .tab-content .recent-flips-table th { font-size: 1rem; }
+      .params-table td { font-size: 1.0rem; }
+      .params-table td { font-size: 1.1rem; }
+      .tab-button { font-size: 1.1rem; }
+      .tab-content .results-table td { font-size: 2.2rem; }
+      .tab-content .stats-table td { font-size: 1.1rem; }
+      .tab-content .recent-flips-table td, .tab-content .recent-flips-table th { font-size: 1.1rem; }
+      .tab-content .stats-table td { font-size: 1.2rem; }
+      .tab-content .recent-flips-table td, .tab-content .recent-flips-table th { font-size: 1.2rem; }
     }
   </style>
 </head>
